examples/pass/function_without_arg_type.uplp
-- category = "value"
--
-- [metadata]
-- type = "Num"
-- value = 20
let double = |x| x * 2 in
double 10